# SepiaCore

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.user.3.3-pre1  LICENSE  README.md  messages.proto
ImagePlayer/: CMakeLists.txt
ImagePlayer/defs/: imageplayer.h
ImagePlayer/src/: imageplayer.cpp  main.cpp
SensorController/: CMakeLists.txt
SensorController/defs/: ximeacontroller.h
SensorController/src/: main.cpp  ximeacontroller.cpp
SensorConverter/: CMakeLists.txt  intrinsics.yml
SensorConverter/defs/: grfmt_jpeg.h  processthread.h  rectification.h
SensorConverter/src/: grfmt_jpeg.cpp  main.cpp  processthread.cpp  rectification.cpp
SensorInterface/: CMakeLists.txt
SensorInterface/defs/: araviscamera.h  araviscapture.h  aravisimage.h  aravisstream.h  fc2capture.h  leptoncapture.h  leptoninterface.h  sensorinterface.h  spinnakercapture.h  usbreset.h  v4l2camera.h  v4l2capture.h  v4l2interface.h  ximeacapture.h
SensorInterface/src/: araviscamera.cpp  araviscapture.cpp  aravisimage.cpp  aravisstream.cpp  fc2capture.cpp  leptoncapture.cpp  leptoninterface.cpp  main.cpp  sensorinterface.cpp  spinnakercapture.cpp  usbreset.cpp  v4l2camera.cpp  v4l2capture.cpp  v4l2interface.cpp  ximeacapture.cpp
SensorRecorder/: CMakeLists.txt
SensorRecorder/defs/: playback.h  record.h
SensorRecorder/src/: main.cpp  playback.cpp  record.cpp
SensorRectifier/: CMakeLists.txt  extrinsics.yml
SensorRectifier/defs/: rectification.h
SensorRectifier/src/: processthread.cpp
SensorViewer/: CMakeLists.txt  MHCdemosaic.cl
SensorViewer/defs/: processthread.h  settings.h
SensorViewer/src/: main.cpp  processthread.cpp  settings.cpp
Test/: CMakeLists.txt
Test/src/: main.cpp  main.cpp.bak
