project(SepiaCore)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
cmake_minimum_required( VERSION 3.16.3 )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -march=native -O3 -fopenmp")
#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLINUX -std=c++14 -g -O0")

add_subdirectory(SensorInterface)
add_subdirectory(SensorController)
add_subdirectory(Test)
add_subdirectory(SensorConverter)
add_subdirectory(SensorViewer)
add_subdirectory(ImagePlayer)
add_subdirectory(SensorRecorder)
